CMF 1.5.1beta (2005/03/24)

  New Features

    - CMFCore.TypesTool and CMFCore.PortalFolder: If invokeFactory is 
      called from code it will now hand back the created object's ID. This
      does not change any behavior when called directly from the web. Both
      methods returned None before, so there is no dependencies anywhere
      on their return values, anyway. (http://collector.zope.org/CMF/331)

    - CMFSetup: When importing skins configurations you can now specify a
      layer to be inserted after a given layer. Previously you could only
      insert before a given layer.

    - CatalogTool: All default FieldIndex instances used for indexing
      DateTime values are now created as DateIndex instances instead. All
      default TextIndex instances are now created as ZCTextIndex instances.
      (CMF collector issues http://www.zope.org/Collectors/CMF/191 and
      http://www.zope.org/Collectors/CMF/302)

    - CMFSetup: Improved 'skip purge' behavior of the skins import handler.
      If purging is disabled, it's now possible to modify existing skin
      configurations. You can use '*' as wildcard for skin-path ids and a
      'insert-before' attribute to specify where to insert a new layer.

    - CMFSetup tool: Improved 'Properties' tab.
      The active site configuration can now be selected from a list of
      registered profiles and stored snapshots.
      (http://collector.zope.org/CMF/264)

    - CMFSetup: Added handlers for site properties.

    - CMFSetup utils: Added 'ConfiguratorBase' class.
      It's now recommended to use this class as base for all configurators.
      The class includes some generic methods to handle subobjects and
      properties.

    - FSObject: Now FSObject-derived items like FSImage or FSFile can have 
      security declarations inside the metadata file.
      (http://collector.zope.org/CMF/289)

    - profiles: Moved 'default' profile to CMFDefault.