@@ -766,10 +766,32 @@ class TypesTool(UniqueObject, Folder, ActionProviderBase):
         fti = None
         if typeinfo_name:
             info = self.listDefaultTypeInformation()
-            for (name, ft) in info:
-                if name == typeinfo_name:
-                    fti = ft
-                    break
+
+            # Nasty orkaround to stay backwards-compatible
+            # This workaround will disappear in CMF 1.7
+            if typeinfo_name.endswith(')'):
+                # This is a new-style name. Proceed normally.
+                for (name, ft) in info:
+                    if name == typeinfo_name:
+                        fti = ft
+                        break
+            else:
+                # Attempt to work around the old way
+                # This attempt harbors the problem that the first match on
+                # meta_type will be used. There could potentially be more
+                # than one TypeInformation sharing the same meta_type.
+                warn('Please switch to the new format for typeinfo names '
+                     '\"product_id: type_id (meta_type)\", the old '
+                     'spelling will disappear in CMF 1.7', DeprecationWarning)
+
+                ti_prod, ti_mt = [x.strip() for x in typeinfo_name.split(':')]
+
+                for name, ft in info:
+                    if ( name.startswith(ti_prod) and
+                         name.endswith('(%s)' % ti_mt) ):
+                        fti = ft
+                        break
+
             if fti is None:
                 raise BadRequest('%s not found.' % typeinfo_name)
             if not id:
